# gcpdiag

./: .bumpversion.cfg  .coveragerc  .env  .gitallowed  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylint-dictionary.txt  .pylintrc  .safety-policy.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  PRIVACY.md  Pipfile  README.md  adk.py  build.sh  gcp-doctor  gemini-extension.json  main.py  pyinstaller.spec  pyproject.toml  requirements.in  requirements.txt  sitemap.xml  venv-activate
.Jules/: palette.md
.devcontainer/: .env  README.md  devcontainer.json
.github/workflows/: code-analysis.yml  gh-pages.yml  gke-eol.yml  scorecard.yml  test.yml
.jules/: sentinel.md
agent/: agent.py  agentcli.py
cookiecutter-gcpdiag-rule/: cookiecutter.json  cookiecutter_runner.py
cookiecutter-gcpdiag-rule/hooks/: post_gen_project.py
docker/gcp-doctor/: Dockerfile  Makefile  entrypoint.sh
docker/gcpdiag/: Dockerfile  Makefile  entrypoint.sh
docker/hugo/: Dockerfile  Makefile  README.md
docker/pipenv/: Dockerfile  Makefile  README  entrypoint.sh
docker/pipenv-python-3.12/: Dockerfile  Makefile
docker/pipenv-python-3.7/: Dockerfile  Makefile
docker/pipenv-python-3.9/: Dockerfile  Makefile  entrypoint.sh
dummies/gke1/: Makefile  project.tf  resources.tf
gcp_doctor/: cache.py  caching.py  config.py  models.py  models_test.py  test_models.py  test_utils.py  utils.py  utils_test.py
gcp_doctor/lint/: __init__.py  command.py  lint.py  report_terminal.py  warn_2021_003_sa_perm.py
gcp_doctor/queries/: apis.py  apis_stub.py  apis_test.py  compute.py  crm.py  crm_stub.py  crm_test.py  gce.py  gce_stub.py  gce_test.py  gke.py  gke_mock.py  gke_stub.py  gke_test.py  iam.py  iam_stub.py  iam_test.py  kms.py  kms_stub.py  kms_test.py  logs.py  logs_stub.py  logs_test.py  monitoring.py  monitoring_stub.py  monitoring_test.py  project.py  test_gke.py
gcpdiag/: agent.py  caching.py  caching_test.py  config.py  config_test.py  context.py  executor.py  executor_test.py  hooks.py  mcp_server.py  models.py  models_test.py  product_list.py  rule_classes.py  test_mcp.py  test_mcplocal.py  types.py  types_test.py  utils.py  utils_test.py
gcpdiag/async_queries/: api.py  creds.py  project_regions.py  project_regions_test.py
gcpdiag/lint/: __init__.py  command.py  command_test.py  lint_rule_repository_test.py  report_csv.py  report_json.py  report_terminal.py  (+1 more)
kokoro/: Makefile
privacy/: index.html
pyinstaller/: hook-gcp_doctor.lint.py  hook-gcp_doctor.queries.py  hook-gcpdiag.lint.py  hook-gcpdiag.queries.py  hook-gcpdiag.runbook.py  hook-googleapiclient.model.py
rules/: index.html
runbook/: index.html
test-data/: Makefile.inc  README.md
website/: api_render.py  config.toml  go.mod  hugo.sh
(+3585 files in other folders)
